--- a/wp-content/themes/fusion/css/style.css
+++ b/wp-content/themes/fusion/css/style.css
@@ -159,6 +159,11 @@ img {
     margin-left: -6px;
 }
 
+.owl-carousel .owl-stage{
+    display: flex;
+    align-items: center;
+}
+
 .sub-txt {
     color: var(--orange-clr);
     font-size: 14px;
